# jsonapi

./: .gitignore  README.md
extendjsonapi/: CHANGELOG.rst  README.md  pyproject.toml
extendjsonapi/tests/: test_extendjsonapi.py
