[tool.poetry]
name = "extendjsonapi"
version = "0.1.0"
description = "extend the jsonapi for encoding and decoding more objects"
authors = ["Linzhe he <he.linz@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
